--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,16 @@
   border: 1px solid black;
   margin-left: 10px;
 }
+.white{
+  background-color: white;
+}
+.explore{
+  background-color: white;
+  color: black;
+  padding: 10px;
+  border: 1px solid black;
+}
+.explore:hover{
+  cursor: pointer;
+  background-color: rgba(233, 230, 230, 0.363);
+}
