--- a/src/components/top/NavBar.css
+++ b/src/components/top/NavBar.css
@@ -56,3 +56,11 @@
     padding-left: 20px;
 }   
 
+.sticky {
+    position: fixed;
+    top: 0;
+    background-color: white;
+    width: 100%;
+    z-index: 1;
+  }
+
